[project]
name = "sqlalchemy_exasol"
version = "5.2.0"
requires-python = ">=3.10,<4"
description = "EXASOL dialect for SQLAlchemy"
authors = [
    { name = "Exasol AG", email = "opensource@exasol.com" },
    { name = "Blue Yonder GmbH" },
]
readme = "README.rst"
license = "BSD"
keywords = [
    "exasol",
    "sql",
    "sqlalchemy",
    "data science",
    "database",
]
dynamic = ["classifiers", "dependencies"]

[project.urls]
Homepage = "https://www.exasol.com/"
Documentation = "https://exasol.github.io/sqlalchemy-exasol/"
Source = "https://github.com/exasol/sqlalchemy-exasol"
Issues = "https://github.com/exasol/sqlalchemy-exasol/issues"
Changelog = "https://exasol.github.io/sqlalchemy-exasol/changelog.html"

[build-system]
requires = ["poetry_core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
requires-poetry = ">=2.1.0"
packages = [
    { include = "sqlalchemy_exasol" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Programming Language :: SQL",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Database",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
include = [
    "README.rst",
    "CHANGELOG.rst",
    "LICENSE",
]
exclude = []

[tool.poetry.dependencies]
packaging = ">=21.3"
pyexasol = ">=0.26.0,<2"
sqlalchemy = "^2.0.0"

[tool.poetry.group.dev.dependencies]
nox = ">=2022.1.7"
pytest-json-report = ">=1.5.0"
# The excluded versions mirror the excluded versions of sqla 1.3.X.
# The limitation/issue pytest <6 is tracked in https://github.com/exasol/sqlalchemy-exasol/issues/144
pytest = ">=6,<9"
rich = "^13.3.1"
exasol-integration-test-docker-environment = "^4.0.0"
pytest-exasol-backend = "^1.0.0"
exasol-toolbox = "^1.12.0"

[tool.poetry.plugins."sqlalchemy.dialects"]
"exa.websocket" = "sqlalchemy_exasol.websocket:EXADialect_websocket"


[tool.pytest.ini_options]
addopts = "--tb native -v -r fxX"
filterwarnings = [
    "error",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]
markers = [
    "backend: backend tests.",
]

[tool.black]
line-length = 88
verbose = false
include = "\\.pyi?$"

[tool.isort]
profile = "black"
force_grid_wrap = 2

[tool.pylint.master]
fail-under = 5.1

[tool.pylint.format]
max-line-length = 88
max-module-lines = 800

[[tool.mypy.overrides]]
module = [
    "sqlalchemy_exasol.base",
    # not supporting mypy > 1.10.0; https://docs.sqlalchemy.org/en/20/orm/extensions/mypy.html
    "sqlalchemy.*",
    "test.*",
]
ignore_errors = true
follow_untyped_imports = true

[tool.sonar]
projectKey = "com.exasol:sqlalchemy-exasol"
hostUrl = "https://sonarcloud.io"
organization = "exasol"
