[project]
name = "sqlalchemy_exasol"
version = "6.1.0"
description = "EXASOL dialect for SQLAlchemy"
authors = [
    { name = "Exasol AG", email = "opensource@exasol.com" },
    { name = "Blue Yonder GmbH" },
]
# pytest-exasol-backend requires Python <3.14. When pytest-exasol-backend has been
# updated to allow Python 3.14, then we can remove the override for python_versions.
# Keeping track of pytest-exasol-backend and removing the override is tracked in
# this issue:
#     https://github.com/exasol/sqlalchemy-exasol/issues/674
requires-python = ">=3.10,<3.14"
readme = "README.rst"
license = "BSD-2-Clause"
keywords = [
    "exasol",
    "sql",
    "sqlalchemy",
    "data science",
    "database",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Programming Language :: SQL",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "packaging>=21.3",
    "pyexasol>=0.26.0,<3.0",
    # sqlalchemy has been downpinned to exclude 2.0.45 released 2025-December
    # as we had failing test suites. This will be resolved in :
    #     https://github.com/exasol/sqlalchemy-exasol/issues/697
    "sqlalchemy>=2.0.0,<2.0.45",
]
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://www.exasol.com/"
Documentation = "https://exasol.github.io/sqlalchemy-exasol/"
Source = "https://github.com/exasol/sqlalchemy-exasol"
Issues = "https://github.com/exasol/sqlalchemy-exasol/issues"
Changelog = "https://exasol.github.io/sqlalchemy-exasol/changelog.html"

[project.entry-points."sqlalchemy.dialects"]
"exa.websocket" = "sqlalchemy_exasol.websocket:EXADialect_websocket"

[build-system]
requires = ["poetry_core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "nox>=2022.1.7",
    "pytest-json-report>=1.5.0",
    "pytest>=6,<9",
    "exasol-integration-test-docker-environment>=5.0.0,<6",
    "pytest-exasol-backend>=1.0.0,<2",
    "exasol-toolbox>=5.1.0,<6",
    "pydantic>=2.12.5,<3",
    "pydantic-settings>=2.12.0,<3",
]

[tool.poetry]
requires-poetry = ">=2.3.0"
packages = [
    { include = "sqlalchemy_exasol" },
]
include = [
    "README.rst",
    "CHANGELOG.rst",
    "LICENSE",
]
exclude = []

[tool.pytest.ini_options]
addopts = "--tb native -v -r fxX"
filterwarnings = [
    "error",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]
markers = [
    "backend: backend tests.",
    # needed for pytest >= 8.0, as the markers must be registered. This comes from
    # sqlalchemy's test suite.
    "mypy: mypy integration / plugin tests",
]
xfail_strict = true

[tool.black]
line-length = 88
verbose = false
include = "\\.pyi?$"

[tool.isort]
profile = "black"
force_grid_wrap = 2

[tool.pylint.master]
fail-under = 4.9

[tool.pylint.format]
max-line-length = 88
max-module-lines = 800

[tool.ruff.lint]
extend-ignore = [
    "E", # Syntax errors
    "F", # Pyflakes rules (excluding F401)
    "UP", # pyupgrade rules
    "D",  # Docstring rules
]
extend-select = ["F401"]
unfixable = []

[[tool.mypy.overrides]]
module = [
    "test.*",
]
ignore_errors = true
follow_untyped_imports = true

[tool.sonar]
projectKey = "com.exasol:sqlalchemy-exasol"
host.url = "https://sonarcloud.io"
organization = "exasol"
